--- a/index.html
+++ b/index.html
@@ -126,13 +126,35 @@
 	    </section>
 
 	    <section class="videos">
-		<div class="velika_slika"></div>
-		<div class="velika_slika"></div>
-		<div class="velika_slika"></div>
-		<div class="mala_slika"></div>
-		<div class="mala_slika"></div>
-		<div class="mala_slika"></div>
-		<div class="mala_slika"></div>
+		<div class="slika1">
+		    <div class="hover_img">
+			<div class="text_hover">
+			    <h1>VIP Auto Tires & Service</h1>
+			    <p>eCommerce Magento</p>
+			</div>
+		    </div>
+		</div>
+		<div class="slika2"></div>
+		<div class="slika3"></div>
+		<div class="slika4">
+		    <div class="hover_img">
+			<div class="text_hover">
+			    <h1>VIP Auto Tires & Service</h1>
+			    <p>eCommerce Magento</p>
+			</div>
+		    </div>
+		</div>
+		<div class="slika5"></div>
+		<div class="slika6"></div>
+		<div class="slika7">
+		    <div class="hover_img">
+			<div class="text_hover">
+			    <h1>VIP Auto Tires & Service</h1>
+			    <p>eCommerce Magento</p>
+			</div>
+		    </div>
+
+		</div>
 	    </section>
 
     </main>
