--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 	    </section>
 
 	    <section class="videos">
-		<div class="slika1">
+		<div class="slika1 slika">
 		    <div class="hover_img">
 			<div class="text_hover">
 			    <h1>VIP Auto Tires & Service</h1>
@@ -134,9 +134,9 @@
 			</div>
 		    </div>
 		</div>
-		<div class="slika2"></div>
-		<div class="slika3"></div>
-		<div class="slika4">
+		<div class="slika2 slika"></div>
+		<div class="slika3 slika"></div>
+		<div class="slika4 slika">
 		    <div class="hover_img">
 			<div class="text_hover">
 			    <h1>VIP Auto Tires & Service</h1>
@@ -144,9 +144,9 @@
 			</div>
 		    </div>
 		</div>
-		<div class="slika5"></div>
-		<div class="slika6"></div>
-		<div class="slika7">
+		<div class="slika5 slika"></div>
+		<div class="slika6 slika"></div>
+		<div class="slika7 slika">
 		    <div class="hover_img">
 			<div class="text_hover">
 			    <h1>VIP Auto Tires & Service</h1>
@@ -161,4 +161,3 @@
 
 </body>
 </html>
-<!-- Test -->
