team section added

--- a/index.html
+++ b/index.html
@@ -157,6 +157,62 @@
 		</div>
 	    </section>
 
+	    <section class="uglovi">
+
+		    <div class="uglovi_box uglovi_dole uglovi_box_01">
+			<div class="uglovi_cont">
+			    <i class="fa-solid fa-calendar-plus"></i>
+			    <h1>230</h1>
+			    <p>Compled Projects</p>
+			</div>
+		    </div>
+
+		    <div class="uglovi_box uglovi_box_02">
+			<div class="uglovi_cont">
+			    <i class="fa-solid fa-calendar-plus"></i>
+			    <h1>230</h1>
+			    <p>Compled Projects</p>
+			</div>
+		    </div>
+
+
+		    <div class="uglovi_box uglovi_dole uglovi_box_03">
+			<div class="uglovi_cont">
+			    <i class="fa-solid fa-calendar-plus"></i>
+			    <h1>230</h1>
+			    <p>Compled Projects</p>
+			</div>
+		    </div>
+
+		    <div class="uglovi_box uglovi_box_04">
+			<div class="uglovi_cont">
+			    <i class="fa-solid fa-calendar-plus"></i>
+			    <h1>230</h1>
+			    <p>Compled Projects</p>
+			</div>
+		    </div>
+
+	    </section>
+
+	    <section class="team">
+		<div class="centar">
+
+		    <div class="team_text">
+			<h3>NICE TO MEET</h3>
+			<h1>OUR TEAM</h1>
+		    </div>
+
+		    <div class="slike_cont">
+			<div class="team_slika team_slika1"></div>
+			<div class="team_slika team_slika2"></div>
+			<div class="team_slika team_slika3"></div>
+			<div class="team_slika team_slika4"></div> 
+		    </div>
+
+			<a class="general_button team_button" href="#">MEET OUR TEAM</a>
+	    	</div>
+	    </section>
+
     </main>
 
 </body>
