--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 	    </section>
 
 	    <section class="dron">
-		<div class="dron_cont centar">
+		<div class="dron_cont">
 		    <h1>Fresh Ideas, Fresh Moments Giving Wings to your Stories.</h1>
 		    <p>INC5000, BEST PLACES TO WORK 2019</p>
 
@@ -283,8 +283,74 @@
 		    </div>
 		</div>
 	    </section>
+	    
+	    <section class="last centar">
+		<div class="last_gore">
 
+		    <div class="last_log">
+		        <img src="img/header_logo.webp" alt="logo">
+		    </div>
+
+		    <div class="icons">
+			<i class="fa-brands fa-facebook"></i>
+			<i class="fa-brands fa-twitter"></i>
+			<i class="fa-brands fa-github"></i>
+			<i class="fa-brands fa-instagram"></i>
+			<i class="fa-brands fa-youtube"></i>
+		    </div>
+
+		</div>
+		
+		<div class="last_dole">
+
+		    <div class="prvi_i_pos">
+			<h1>About Us</h1>
+			<p>Formed in 2006 by Matt Hobbs and Cael Jones, Videoprah is an
+			award-winning, full-service production company specializing.</p>
+			<div class="read_more">
+			    <a href="#">Read more -></a>
+			</div>
+		    </div>
+
+		    <div class="drugi_i_treci">
+			<h1>Who are we</h1>
+			<ol>
+			    <li>Team</li>
+			    <li>Carrers</li>
+			    <li>Contact us</li>
+			    <li>Locations</li>
+			</ol>
+		    </div>
+
+		    <div class="drugi_i_treci">
+			<h1>Our Work</h1>
+			<ol>
+			    <li>Feature</li>
+			    <li>Latest</li>
+			    <li>Browse Archive</li>
+			    <li>Video for web</li>
+			</ol>
+		    </div>
+
+		    <div class="prvi_i_pos">
+			<h1>Newsletter</h1>
+			<p>Videoprah is an award-winning, full-service production company
+			specializing.</p>
+			<div class="last_input">
+			    <input type="email" placeholder="Email">
+			    <i class="fa-solid fa-paper-plane"></i>
+			</div>
+		    </div>
+
+		</div>
+
+	    </section>
     </main>
+
+    <footer>
+	<p>Copyright © 2022 All rights reserved | This template is made with  <i class="fa-solid
+	    fa-heart blue"></i> by <span class="blue">Colorlib</span></p>
+    </footer>
 
 </body>
 </html>
